Implemented safer way of data files saving (search and browse windows, discovery services, host cache, security rules, search result filters). Minor fix for host cache.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9057 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -3816,6 +3816,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Res\ContactJabber.ico"
+				>
+			</File>
+			<File
 				RelativePath="Res\ContactMSN.ico"
 				>
 			</File>
@@ -4413,6 +4417,14 @@
 			</File>
 			<File
 				RelativePath="Res\Uploads.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Res\user.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Res\user_me.ico"
 				>
 			</File>
 			<File
