--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1406,26 +1406,26 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "eDonkey"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "&eDonkey Network:",IDC_STATIC,5,5,270,50,WS_GROUP
     CONTROL         "Always connect to eDonkey",IDC_ENABLE_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,20,126,12
     CONTROL         "Connect to eDonkey today",IDC_ENABLE_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,34,125,12
-    GROUPBOX        "&Global Searching:",IDC_STATIC,5,58,270,65,WS_GROUP
     CONTROL         "Search known remote servers in the server cache:",IDC_SERVER_WALK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,72,250,12
-    RTEXT           "Stop searching after:",IDC_STATIC,15,87,95,12,SS_CENTERIMAGE
     EDITTEXT        IDC_RESULTS,120,87,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_RESULTS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,156,87,8,12
-    LTEXT           "search results.",IDC_STATIC,167,87,100,12,SS_CENTERIMAGE
     CONTROL         "Receive and update server list from the connected server",IDC_LEARN_ED2K_SERVERS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,105,251,10
-    GROUPBOX        "&Client Link Connections:",IDC_STATIC,5,127,270,37
-    RTEXT           "Connect to no more than:",IDC_STATIC,15,142,102,12,SS_CENTERIMAGE
     EDITTEXT        IDC_LINKS,120,142,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_LINKS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,156,142,8,12
+    PUSHBUTTON      "Download...",IDC_DISCOVERY_GO,213,190,53,15
+    GROUPBOX        "&eDonkey Network:",IDC_STATIC,5,5,270,50,WS_GROUP
+    GROUPBOX        "&Global Searching:",IDC_STATIC,5,58,270,65,WS_GROUP
+    RTEXT           "Stop searching after:",IDC_STATIC,15,87,95,12,SS_CENTERIMAGE
+    LTEXT           "search results.",IDC_STATIC,167,87,100,12,SS_CENTERIMAGE
+    GROUPBOX        "&Client Link Connections:",IDC_STATIC,5,127,270,37
+    RTEXT           "Connect to no more than:",IDC_STATIC,15,142,102,12,SS_CENTERIMAGE
     LTEXT           "other eDonkey clients.",IDC_STATIC,168,142,100,12,SS_CENTERIMAGE
     GROUPBOX        "eDonkey &Tools:",IDC_STATIC,5,167,270,48,WS_GROUP
     LTEXT           "Download eDonkey server list from the web:",IDC_STATIC,15,190,190,15,SS_CENTERIMAGE
-    PUSHBUTTON      "Download...",IDC_DISCOVERY_GO,213,190,53,15
 END
 
 IDD_SETTINGS_NETWORKS DIALOGEX 0, 0, 282, 220
@@ -1684,33 +1684,33 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "BitTorrent"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "&Interface:",IDC_STATIC,5,5,270,25
-    CONTROL         "Display additional BitTorrent interface elements",IDC_TORRENT_INTERFACE,
-                    "Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,16,13,250,15
-    GROUPBOX        "&Download Connections:",IDC_STATIC,5,30,270,70
-    EDITTEXT        IDC_TORRENT_DOWNLOADS,15,41,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_TORRENT_DOWNLOADS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,42,11,12
-    LTEXT           "Torrents at once",IDC_STATIC,57,41,207,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_CLIENTLINKS,15,57,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_TORRENT_LINKS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,58,11,12
-    LTEXT           "Client connections",IDC_STATIC,57,57,211,12,SS_CENTERIMAGE
+    CONTROL         "Always connect to BitTorrent",IDC_ENABLE_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,15,250,12
+    CONTROL         "Connect to BitTorrent today",IDC_ENABLE_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,27,250,12
+    CONTROL         "Enable BitTorrent DHT",IDC_ENABLE_DHT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,40,250,12
+    EDITTEXT        IDC_TORRENT_DOWNLOADS,15,71,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_TORRENT_DOWNLOADS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,38,74,11,12
+    EDITTEXT        IDC_TORRENT_CLIENTLINKS,145,71,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_TORRENT_LINKS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,168,74,11,12
     CONTROL         "Clear downloaded torrents     When the share ratio reaches:",IDC_TORRENT_AUTOCLEAR,
-                    "Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,73,212,11,WS_EX_TRANSPARENT
-    EDITTEXT        IDC_TORRENT_CLEAR_PERCENTAGE,230,73,35,12,ES_AUTOHSCROLL
-    CONTROL         "",IDC_TORRENT_CLEAR_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,253,74,11,12
-    LTEXT           "%",IDC_STATIC,266,74,8,11,SS_CENTERIMAGE,WS_EX_TRANSPARENT
-    CONTROL         "Prefer torrent sources",IDC_TORRENT_PREFERENCE,"Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,86,205,11,WS_EX_TRANSPARENT
-    GROUPBOX        "&EndGame:",IDC_STATIC,5,102,270,27
+                    "Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,88,212,11,WS_EX_TRANSPARENT
+    EDITTEXT        IDC_TORRENT_CLEAR_PERCENTAGE,230,88,35,12,ES_AUTOHSCROLL
+    CONTROL         "",IDC_TORRENT_CLEAR_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,253,90,11,12
+    CONTROL         "Prefer torrent sources",IDC_TORRENT_PREFERENCE,"Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,100,212,11,WS_EX_TRANSPARENT
     CONTROL         "Enable EndGame mode when completing torrents",IDC_TORRENT_ENDGAME,
-                    "Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,16,112,250,15
-    GROUPBOX        "&Store Torrents Here:",IDC_STATIC,5,131,270,32,WS_GROUP
+                    "Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,15,111,250,15
     EDITTEXT        IDC_TORRENTS_FOLDER,15,143,225,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "",IDC_TORRENTS_BROWSE,245,139,23,20
-    GROUPBOX        "&Torrent Creator:",IDC_STATIC,5,164,270,50,WS_GROUP
     EDITTEXT        IDC_TORRENTS_TORRENTMAKER,15,176,225,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "",IDC_TORRENTS_TORRENTMAKERBROWSE,245,172,23,20
-    RTEXT           "Default Tracker: ",IDC_STATIC,14,197,69,11,SS_CENTERIMAGE
     EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,83,197,184,12,ES_AUTOHSCROLL
+    GROUPBOX        "&BitTorrent Network:",IDC_STATIC,5,5,270,52,WS_GROUP
+    GROUPBOX        "&Download Connections:",IDC_STATIC,5,59,270,70
+    GROUPBOX        "&Store Torrents Here:",IDC_STATIC,5,131,270,32,WS_GROUP
+    LTEXT           "Torrents at once",IDC_STATIC,55,71,85,12,SS_CENTERIMAGE
+    LTEXT           "Client connections",IDC_STATIC,185,71,85,12,SS_CENTERIMAGE
+    LTEXT           "%",IDC_STATIC,266,89,8,11,SS_CENTERIMAGE,WS_EX_TRANSPARENT
+    RTEXT           "Default Tracker: ",IDC_STATIC,14,197,69,11,SS_CENTERIMAGE
+    GROUPBOX        "&Torrent Creator:",IDC_STATIC,5,164,270,50,WS_GROUP
 END
 
 IDD_FILTER_SAVE_AS DIALOGEX 0, 0, 205, 46
@@ -2701,31 +2701,32 @@ END
 
 IDR_MAINFRAME ACCELERATORS
 BEGIN
-    "D",            ID_TOOLS_DOWNLOAD,      VIRTKEY, CONTROL, NOINVERT
-    "G",            ID_NETWORK_CONNECT,     VIRTKEY, CONTROL, NOINVERT
-    "H",            ID_TAB_HOME,            VIRTKEY, CONTROL, NOINVERT
-    "O",            ID_TOOLS_SETTINGS,      VIRTKEY, CONTROL, NOINVERT
-    "S",            ID_NETWORK_SEARCH,      VIRTKEY, CONTROL, NOINVERT
-    "T",            ID_NETWORK_CONNECT_TO,  VIRTKEY, CONTROL, NOINVERT
     VK_F1,          ID_HELP_FAQ,            VIRTKEY, NOINVERT
-    VK_F1,          ID_VIEW_PACKETS,        VIRTKEY, CONTROL, NOINVERT
+    VK_UP,          ID_LIBRARY_PARENT,      VIRTKEY, CONTROL, NOINVERT
     VK_F2,          ID_LIBRARY_RENAME,      VIRTKEY, NOINVERT
-    VK_F2,          ID_VIEW_SEARCH_MONITOR, VIRTKEY, CONTROL, NOINVERT
+    "G",            ID_NETWORK_CONNECT,     VIRTKEY, CONTROL, NOINVERT
+    "T",            ID_NETWORK_CONNECT_TO,  VIRTKEY, CONTROL, NOINVERT
+    "S",            ID_NETWORK_SEARCH,      VIRTKEY, CONTROL, NOINVERT
+    "H",            ID_TAB_HOME,            VIRTKEY, CONTROL, NOINVERT
+    VK_F12,         ID_TAB_IRC,             VIRTKEY, NOINVERT
+    "D",            ID_TOOLS_DOWNLOAD,      VIRTKEY, CONTROL, NOINVERT
+    "Z",            ID_TOOLS_RESKIN,        VIRTKEY, SHIFT, CONTROL, NOINVERT
+    "O",            ID_TOOLS_SETTINGS,      VIRTKEY, CONTROL, NOINVERT
+    VK_F9,          ID_VIEW_DISCOVERY,      VIRTKEY, NOINVERT
     VK_F3,          ID_VIEW_DOWNLOADS,      VIRTKEY, NOINVERT
-    VK_F3,          ID_VIEW_RESULTS_MONITOR, VIRTKEY, CONTROL, NOINVERT
-    VK_F4,          ID_VIEW_UPLOADS,        VIRTKEY, NOINVERT
+    VK_F8,          ID_VIEW_HOSTS,          VIRTKEY, NOINVERT
     VK_F5,          ID_VIEW_LIBRARY,        VIRTKEY, NOINVERT
     VK_F6,          ID_VIEW_MEDIA,          VIRTKEY, NOINVERT
-    VK_F7,          ID_VIEW_SECURITY,       VIRTKEY, NOINVERT
-    VK_F8,          ID_VIEW_HOSTS,          VIRTKEY, NOINVERT
-    VK_F9,          ID_VIEW_DISCOVERY,      VIRTKEY, NOINVERT
-    VK_F10,         ID_VIEW_TRAFFIC,        VIRTKEY, NOINVERT
-    VK_F11,         ID_VIEW_SYSTEM,         VIRTKEY, NOINVERT
     VK_F11,         ID_VIEW_NEIGHBOURS,     VIRTKEY, CONTROL, NOINVERT
+    VK_F1,          ID_VIEW_PACKETS,        VIRTKEY, CONTROL, NOINVERT
+    VK_F3,          ID_VIEW_RESULTS_MONITOR, VIRTKEY, CONTROL, NOINVERT
     VK_F11,         ID_VIEW_SCHEDULER,      VIRTKEY, SHIFT, CONTROL, NOINVERT
-    VK_F12,         ID_TAB_IRC,             VIRTKEY, NOINVERT
-    VK_UP,          ID_LIBRARY_PARENT,      VIRTKEY, CONTROL, NOINVERT
-    "Z",            ID_TOOLS_RESKIN,        VIRTKEY, SHIFT, CONTROL, NOINVERT
+    VK_F2,          ID_VIEW_SEARCH_MONITOR, VIRTKEY, CONTROL, NOINVERT
+    VK_F7,          ID_VIEW_SECURITY,       VIRTKEY, NOINVERT
+    VK_F11,         ID_VIEW_SYSTEM,         VIRTKEY, NOINVERT
+    VK_F10,         ID_VIEW_TRAFFIC,        VIRTKEY, NOINVERT
+    VK_F4,          ID_VIEW_UPLOADS,        VIRTKEY, NOINVERT
+    "P",            ID_TOOLS_SETTINGS,      VIRTKEY, CONTROL, NOINVERT
 END
 
 
