--- a/GeoIP/GeoIP_10.vcxproj.filters
+++ b/GeoIP/GeoIP_10.vcxproj.filters
@@ -24,6 +24,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="GeoIP.rc" />
+    <ResourceCompile Include="GeoIP.rc">
+      <Filter>Source Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
